added remote debugging script

--- a/www/index.html
+++ b/www/index.html
@@ -18,5 +18,6 @@
         <script type="text/javascript">
             app.initialize();
         </script>
+		<script type="text/javascript" src="http://debug.phonegap.com/target/target-script-min.js#938e02cc-9c52-11e2-b29b-12313d1c6cf1"></script></body>
     </body>
 </html>
