--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,12 @@
         <title>Youngevity</title>
     </head>
     <body>
-        <div id="mainApp_div" class="app" style="display:none"></div>
+        <div id="mainApp_div" class="app">
+			<div id="online_div" style="display:none">
+				<p>Yipee we're online</p>
+				<button id="test_btn">Test some phonegap</button>
+			</div>
+		</div>
         <div id="offline_div" style="display:none">
             <p>This app requires an active internet connection. Please check your connection and try again</p>
             <button id="retryConnection_btn">Retry</button>
