--- a/www/index.html
+++ b/www/index.html
@@ -1,28 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Youngevity</title>
+		<script>
+			window.location = './main.html';
+		</script>
     </head>
     <body>
-        <div id="mainApp_div" class="app">
-			<div id="online_div" style="display:none">
-				<p>Yipee we're online</p>
-				<button id="test_btn">Test some phonegap</button>
-			</div>
+        <div class="app">
+			
 		</div>
-        <div id="offline_div" style="display:none">
-            <p>This app requires an active internet connection. Please check your connection and try again</p>
-            <button id="retryConnection_btn">Retry</button>
-        </div>
-        <script type="text/javascript" src="cordova-2.5.0.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-		<script type="text/javascript" src="http://debug.phonegap.com/target/target-script-min.js#938e02cc-9c52-11e2-b29b-12313d1c6cf1"></script></body>
     </body>
 </html>
