--- a/www/index.html
+++ b/www/index.html
@@ -10,5 +10,6 @@
         <div class="app">
 			
 		</div>
+        <script type="text/javascript" src="cordova-2.5.0.js"></script>
     </body>
 </html>
