--- a/www/index.html
+++ b/www/index.html
@@ -1,26 +1,42 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
+<!--
+    Licensed to the Apache Software Foundation (ASF) under one
+    or more contributor license agreements.  See the NOTICE file
+    distributed with this work for additional information
+    regarding copyright ownership.  The ASF licenses this file
+    to you under the Apache License, Version 2.0 (the
+    "License"); you may not use this file except in compliance
+    with the License.  You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing,
+    software distributed under the License is distributed on an
+    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+     KIND, either express or implied.  See the License for the
+    specific language governing permissions and limitations
+    under the License.
+-->
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Youngevity</title>
+        <title>Hello World</title>
     </head>
     <body>
-        <div id="mainApp_div" class="app">
-			
-		</div>
-        <div id="offline_div" style="display:none">
-            <p>This app requires an active internet connection. Please check your connection and try again</p>
-            <button id="retryConnection_btn">Retry</button>
+        <div class="app">
+            <h1>PhoneGap</h1>
+            <div id="deviceready">
+                <p class="status pending blink">Connecting to Device</p>
+                <p class="status complete blink hide">Device is Ready</p>
+            </div>
         </div>
-        <script type="text/javascript" src="cordova-2.5.0.js"></script>
+        <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
-		<!--<script type="text/javascript" src="http://debug.phonegap.com/target/target-script-min.js#938e02cc-9c52-11e2-b29b-12313d1c6cf1"></script>-->
-    </body>
     </body>
 </html>
