--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--
     Licensed to the Apache Software Foundation (ASF) under one
     or more contributor license agreements.  See the NOTICE file
@@ -33,7 +33,7 @@
                 <p class="status complete blink hide">Device is Ready</p>
             </div>
         </div>
-        <script type="text/javascript" src="phonegap.js"></script>
+        <script src="js/cordova-2.5.0.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
